# human-following-jax

./: .gitignore  DEPLOY.md  README.md  README.zh.md  pyproject.toml
deployment/: README.md
deployment/scripts/: install_third_party.sh  pull_models.sh
deployment/src/core/camera_detector/: package.xml  setup.py
deployment/src/core/camera_detector/camera_detector/: depth_estimator.py  main.py  person_detector.py
deployment/src/core/camera_detector/config/: camera_detector.yaml
deployment/src/core/camera_detector/launch/: camera_detector.launch.py
deployment/src/core/command_listener/command_listener/: main.py
deployment/src/core/decider/: package.xml  setup.py
deployment/src/core/decider/baselines/bench/: monitor.py
deployment/src/core/decider/config/: arguments.py  config.py
deployment/src/core/decider/decider/: main.py  main_crl.py  main_fixed_human.py  main_mpc_adc.py  main_orca.py  main_rlpc.py  main_with_controller_fixed_human.py
deployment/src/core/decider/decider/baselines/: mpc_lifted.py
deployment/src/core/decider/launch/: decider.launch.py
deployment/src/core/decider/rl/: collect_cp_infos.py  comprehensive_evaluation.py  evaluation.py  run_with_policy_adaptation.py  run_with_policy_adaptiation_clear_h.py  run_with_visualization.py
deployment/src/core/decider/rl/networks/: distributions.py  dummy_vec_env.py  envs.py  interaction_transformer.py  interaction_transformer_meta.py  (+8 more)
deployment/src/core/depth_costmap/: package.xml  setup.cfg  setup.py
deployment/src/core/depth_costmap/config/: depth_costmap.yaml
deployment/src/core/depth_costmap/depth_costmap/: main.py
deployment/src/core/depth_costmap/launch/: depth_costmap.launch.py
deployment/src/core/following_sim/: .gitignore  README.md  package.xml  setup.cfg  setup.py
deployment/src/core/following_sim/config/: agents_bookstore.yaml  agents_cafe.yaml  agents_corridor.yaml  agents_crowd.yaml  agents_hospital.yaml  agents_house.yaml  agents_junction.yaml  agents_occlusion.yaml  agents_sharp_turn.yaml  agents_small_house.yaml  agents_warehouse.yaml
deployment/src/core/following_sim/following_sim/: cmd_vel_watchdog.py  detections_merger.py  human_states_viz.py  metrics_recorder.py  target_to_uwb_bridge.py  tf_health_monitor.py
deployment/src/core/following_sim/launch/: bookstore.launch.py  bringup.launch.py  cafe.launch.py  corridor.launch.py  crowd.launch.py  hospital.launch.py  house.launch.py  junction.launch.py  occlusion.launch.py  sharp_turn.launch.py  small_house.launch.py  warehouse.launch.py
deployment/src/core/following_sim/rviz/: following_sim.rviz
deployment/src/core/following_sim/scripts/: generate_bt_xmls.py  install_sim_deps.sh  run_scenario.sh  run_warehouse.sh
deployment/src/core/following_sim/urdf/: rosmaster_x3.urdf.xacro
deployment/src/core/following_sim/worlds/: bookstore.world  cafe.world  corridor.world  crowd.world  hospital.world  house.world  junction.world  occlusion.world  sharp_turn.world  small_house.world  warehouse.world
deployment/src/core/occupancy_generation/: package.xml  setup.cfg  setup.py
deployment/src/core/occupancy_generation/config/: occupancy_generation.yaml
deployment/src/core/occupancy_generation/launch/: occupancy_generation.launch.py  static_map_node.launch.py
deployment/src/core/occupancy_generation/occupancy_generation/: main.py  static_map_node.py
deployment/src/core/predictor/predictor/: human.py  main.py
deployment/src/core/sort_tracker/config/: topics.yaml
deployment/src/core/sort_tracker/sort_tracker/: main.py  sort.py  sort_constant_acc.py
deployment/src/core/target_tracker/: package.xml  setup.py
deployment/src/core/target_tracker/config/: target_tracker.yaml
deployment/src/core/target_tracker/launch/: target_tracker.launch.py
deployment/src/core/target_tracker/target_tracker/: main.py  reid_feature.py
deployment/src/core/tf_republisher/: package.xml  setup.cfg  setup.py
deployment/src/core/tf_republisher/tf_republisher/: map_odom_republisher.py
deployment/src/core/uwb_tracking/: package.xml  setup.cfg  setup.py
deployment/src/core/uwb_tracking/config/: uwb_config.yaml
deployment/src/core/uwb_tracking/launch/: uwb_tracking.launch.py
deployment/src/core/uwb_tracking/uwb_tracking/: uwb_tracking.py
docs/: ARCHITECTURE.md  AUDIT.md  REPRODUCE.md
runs/paper_repro/20260521_073405/: args.json  eval_results.txt  log.csv
scripts/: eval.py  train.py
src/env/: crowd_follow_env.py  human_dynamics.py
src/policy/: it_meta.py
src/training/: ppo.py
tests/: test_env.py  test_human_dynamics.py  test_lidar.py  test_policy.py  test_training_smoke.py
training/: SETUP.md
training/docs/: PORT_SCOPE.md  TRAINING_RESULTS.md
training/scripts/: bench_gpu_memory.py  train.py
training/src/env/: crowd_follow_env.py  geometry.py  lidar.py
training/src/training/: ppo.py
training/tests/: test_speedup.py
(+9 files in other folders)
