[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "human-following-jax"
version = "0.1.0"
description = "JAX rewrite of RSS 2026 'Learning Customizable Human Following' — GPU-resident env + PPO for 10-100x training speedup"
authors = [{ name = "TASL Lab" }]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
dependencies = [
    # NOTE: jax/jaxlib pinned to versions compatible with Python 3.8.
    # On Python ≥3.10, upgrade to jax>=0.4.30 for ~20% faster XLA.
    "jax==0.4.13",
    "flax==0.7.2",
    "optax==0.1.7",
    "chex==0.1.7",
    "distrax==0.1.3",
    "numpy>=1.22",
    "gymnasium",
    "tyro",          # CLI parsing
    "matplotlib",    # viz
    "tqdm",
    "wandb",         # optional logging
]

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "ruff"]
torch-parity = ["torch>=2.0"]   # only needed when running policy-parity test against original

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
